--- a/frontend/src/components/Profil/HeroProfil.module.css
+++ b/frontend/src/components/Profil/HeroProfil.module.css
@@ -19,6 +19,17 @@
   display: block;
 }
 
+.avatarPlaceholder {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  color: #d2d2d2;
+  background: rgba(255, 255, 255, 0.06);
+  font-weight: 700;
+  font-size: 2rem;
+}
+
 .info {
   display: flex;
   flex-direction: column;
