fix: front landing page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,12 @@ body {
   color: #fff;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 /* layout */
 .container {
   max-width: var(--page-max-width);
