--- a/frontend/src/components/Form/Form.module.css
+++ b/frontend/src/components/Form/Form.module.css
@@ -25,6 +25,14 @@
   font-weight: 600;
 }
 
+.notice {
+  margin: 0;
+  text-align: center;
+  font-size: 0.85rem;
+  color: #d7d7d7;
+  line-height: 1.3;
+}
+
 .form {
   display: flex;
   flex-direction: column;
